Add flag for additional dynamic provisioning flavors